--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@types/html-to-text": "^8.0.1",
+    "@types/pdfmake": "^0.1.20",
     "apollo-angular": "^2.6.0",
+    "html-to-text": "^8.1.0",
     "pdfmake": "^0.2.4",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
