--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@apollo/client": "^3.5.7",
+    "@apollo/client": "^3.5.10",
+    "@apollo/graphql": "^14.5.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/html-to-text": "^8.0.1",
     "@types/pdfmake": "^0.1.20",
     "apollo-angular": "^2.6.0",
+    "apollo-server": "^3.6.3",
+    "graphql": "^15.8.0",
     "html-to-text": "^8.1.0",
     "pdfmake": "^0.2.4",
     "primeflex": "^3.1.2",
